# sike-society

./: .gitignore  LICENSE  README.md  sike-society.cabal
app/: Main.hs
docs/: DESIGN.md
src/: Characters.hs  Interaction.hs  Simulation.hs  Threats.hs  Types.hs
test/: Spec.hs
